      lfoN_eq2freq_stepccX, lfoN_eq3freq_stepccX, lfoN_eq1bw, lfoN_eq2bw,
      lfoN_eq3bw, lfoN_eq1bw_onccX, lfoN_eq2bw_onccX, lfoN_eq3bw_onccX,
      lfoN_eq1bw_smoothccX, lfoN_eq2bw_smoothccX, lfoN_eq3bw_smoothccX,
      lfoN_eq1bw_stepccX, lfoN_eq2bw_stepccX, lfoN_eq3bw_stepccX
    - implemented opcodes eq1_vel2freq, eq2_vel2freq,
      eq3_vel2freq, eq1_vel2gain, eq2_vel2gain, eq3_vel2gain

  * SoundFont format engine:
    - Initial implementation (not usable yet)
    - RT-safeness: avoid malloc in audio thread
    - fixed a bug that could cause voice stealing to fail
    - fine-tuned amplitude EG (by switching from gig to sfz EG)
    - initial implementation of Vibrato LFO and Modulation LFO
    - initial implementation of cutoff filter

  * Gigasampler format engine:
    - bugfix: pitch LFO controller "internal+aftertouch" was broken
    - bugfix: filter keyboard tracking was broken
    - filter performance fix (an unnecessary copy was made of the
      filter parameters in each sub fragment)

  * Host plugins:
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)
    - VST bugfix: If the host called resume() before and after
      changing sample rate or block size, the number of channels was
      incorrectly set to two. This caused silence in Cubase 5.
    - save engine type (gig, sfz or sf2) in plugin state
    - VST: when opening Fantasia, look for both 32 and 64 bit Java on
      64 bit Windows
    - AU: changed number of output channels from one stereo to 16
      stereo
    - VST: made it possible to build the VST plugin for Mac
    - AU: link AU plugin dynamically if --disable-shared isn't
      specified

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name
    - removed limit of maximum amount of MIDI ports per MIDI device, since
      there is no reason for this limit

  * audio driver: